Fix search form alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -447,6 +447,7 @@ form input[type=radio], form input[type=checkbox] {
     width: 80%;
     margin-bottom: 0;
     box-sizing: border-box;
+    height: 100%;
 }
 
 #specific_search > input[type=text] {
